# sts-web

./: .gitignore  Cargo.toml  NOTES.md  README.md
assets/: .gitignore
bench/: browser-bench.mjs  run-browser-bench.sh
crates/mimi-wasm/: Cargo.toml
crates/mimi-wasm/src/: lib.rs
crates/sts-wasm/: Cargo.toml
crates/sts-wasm/benches/: inference.rs
crates/sts-wasm/src/: depth.rs  depth_engine.rs  gguf.rs  lib.rs  loader.rs  mimi.rs  model.rs  stream.rs  tokenizer.rs  voice.rs
crates/sts-wasm/src/web/: bindings.rs
crates/sts-wasm/src/wgsl/: shader_argmax.wgsl  shader_attention.wgsl  shader_cache_write.wgsl  shader_embed_q4.wgsl  shader_naive.wgsl  shader_q4k.wgsl  shader_q4k_matvec.wgsl  shader_q4k_matvec_coop.wgsl  shader_q4k_matvec_resadd.wgsl  shader_q4k_matvec_subgroup.wgsl  shader_qkv_split.wgsl  shader_rmsnorm.wgsl  shader_rope.wgsl  shader_rope_cache_write.wgsl  shader_sample_topk.wgsl  shader_swiglu.wgsl  shader_vec_add.wgsl
crates/sts-wasm/tests/: integration_test.rs  mimi_roundtrip_test.rs
crates/sts-wasm/tests/common/: mod.rs
mimi-pkg/: mimi_wasm.js  mimi_wasm_bg.wasm
patches/cubecl-wgpu-0.9.0/src/: runtime.rs
patches/cubecl-wgpu-0.9.0/src/compute/: mem_manager.rs  stream.rs
pkg/: sts_wasm.js
scripts/: analyze_sts_trace.py  analyze_sts_trace_v2.py  compare_depformer_step0.py  compare_forward.py  convert_voices.py  decode_tokens.py  inspect_gguf.py  layer_comparison.py  quantize.py  reference_inference.py  requirements.txt  verify_q4.py
tests/: test_quantize.py
web/: audio-playback.js  audio-processor.js  index.html  mimi-worker.js  serve.mjs  worker.js
